@@ -54,18 +54,4 @@ subprojects {
 
         tasks.named('check') { dependsOn(integrationTestTask) }
     }
-
-    tasks.withType(JavaCompile) {
-        options.compilerArgs += "--enable-preview"
-    }
-
-    tasks.withType(Test).configureEach {
-        jvmArgs += "--enable-preview"
-        useJUnitPlatform()
-    }
-
-    tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
-    }
-
 }
